# zero2prod

./: Cargo.toml  Dockerfile  secureSaaS_standards.txt  trace_example.json
scripts/: init_db.sh
src/: configuerations.rs  lib.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscription.rs
tests/: health_check.rs
