[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-webpki","macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.15.18"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.3"
secrecy = "0.10.3"
tracing-actix-web = "0.5"
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = { version = "0.20.0", features = ["derive"] }
fake = "4.4.0"
proptest = "1.9.0"

[lib]
path = "src/lib.rs"


[[bin]]

path = "src/main.rs"
name = "zero2prod"

